tests/specs/type_literal_readonly_index_signature.txt
# mod.ts
export type T = { readonly [key: string]: number; }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T = { readonly [key: string]: number; }
  | ^

# output.txt
Defined in file:///mod.ts:1:1

type T = { readonly [key: string]: number; }


# output.json
[
  {
    "name": "T",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "typeAlias",
    "typeAliasDef": {
      "tsType": {
        "repr": "",
        "kind": "typeLiteral",
        "typeLiteral": {
          "constructors": [],
          "methods": [],
          "properties": [],
          "callSignatures": [],
          "indexSignatures": [
            {
              "readonly": true,
              "params": [
                {
                  "kind": "identifier",
                  "name": "key",
                  "optional": false,
                  "tsType": {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  }
                }
              ],
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              },
              "location": {
                "filename": "file:///mod.ts",
                "line": 1,
                "col": 18,
                "byteIndex": 18
              }
            }
          ]
        }
      },
      "typeParams": []
    }
  }
]
